--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Nicholas Pueschel</title>
 
 </head>
@@ -13,5 +14,36 @@
         <li><a href="#contact">Contact</a></li>
 
     </ul>
+
+    <div class="container">
+        <div class="desciptor">
+            <h1>
+            NICHOLAS PUESCHEL
+            </h1>
+            <h2>
+                Computer Science
+            </h2>
+            <h2>
+                Rochester Institute of Technology Class of 2021
+            </h2>
+        </div>
+    </div>
+
+    <div class="container">
+        <h1>
+        blah blah blah
+        </h1>
+        <h2>
+            blah blah blah
+        </h2>
+        <h2>
+            blah blah blah
+            blah blah blah
+            blah blah blah
+            blah blah blah
+            blah blah blah
+        </h2>
+    </div>
+
 </body>
 </html>
