--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,13 +1,43 @@
+body{
+  background-image: url("../textures/pink dust.png");
+  font-family: 'Roboto', sans-serif;
+}
+
+div.container {
+  position: relative;
+  margin-top: 10%;
+  margin-bottom: 50%;
+  border: 3px solid #73AD21;
+}
+
+div.descriptor{
+  position: relative;
+  margin-top: 10%;
+  margin-bottom: 50%;
+  border: 3px solid #000;
+}
+
+h1 {
+  text-align: center;
+  color: white;
+  font-size: 100px;
+}
+
+h2{
+  color: white;
+  text-align: center;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+
 }
 
 li {
-  float: left;
+  float: right;
 }
 
 li a {
@@ -20,5 +50,19 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #111;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  opacity: 1;
+  animation: glow 1s;
+  animation-fill-mode: forwards;
 }
+
+@keyframes glow {
+  from {
+    box-shadow: 0 0 0px 0px #EEFF47;
+  }
+  to {
+    box-shadow: 0 0 5px 0px #A69FFF;
+  }
+}
+
+
