--- a/templates/home.html
+++ b/templates/home.html
@@ -9,12 +9,23 @@
 
 </head>
 <body>
+
     <div class="nav" id="navbar">
         <ul>
 
+            <li><a href="resume.pdf">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#about">About</a></li>
+
+        </ul>
+    </div>
+
+    <div class="links" id="links">
+        <ul>
+
+            <li class="link"><a class="imageLink" href="https://github.com/blockheads"><img src=""
+            height=50" width="50"></a></li>
 
         </ul>
     </div>
@@ -33,7 +44,7 @@
             </h2>
             <div class ="buttonWrapper">
                 <button class="contact">
-                    CONTACT ME
+                    GET IN TOUCH
                 </button>
             </div>
         </div>
@@ -44,10 +55,50 @@
     <div class="containerAbout" id="about">
         <div class ="shiftCenter">
             <h1 class="description1">
-                ABOUT
+                ABOUT_ME
             </h1>
             <h2 class="description2">
                 :)
+            </h2>
+            <h2 class="description2">
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+            </h2>
+
+        </div>
+    </div>
+
+    <hr class="projects">
+
+    <div class="containerAbout" id="projects">
+        <div class ="shiftCenter">
+            <h1 class="description1">
+                PROJECT_ZONE
+            </h1>
+            <h2 class="description2">
+                :)
+            </h2>
+            <h2 class="description2">
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+                I am the greatest programmer that ever lived.
+            </h2>
+
+        </div>
+    </div>
+
+    <hr class="contact">
+
+    <div class="containerAbout" id="contact">
+        <div class ="shiftCenter">
+            <h1 class="description1">
+                CONTACT_ME
+            </h1>
+            <h2 class="description2">
+
             </h2>
             <h2 class="description2">
                 I am the greatest programmer that ever lived.
