--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <div class="nav" id="navbar">
         <ul>
 
-            <li><a href="resume.pdf">Resume</a></li>
+            <li><a href="/resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#about">About</a></li>
@@ -86,14 +86,46 @@
                 PROJECT.ZONE
             </h1>
             <h2 class="description2">
-                :)
+                Active Projects
             </h2>
-            <h2 class="description2">
-                I am the greatest programmer that ever lived.
-                I am the greatest programmer that ever lived.
-                I am the greatest programmer that ever lived.
-                I am the greatest programmer that ever lived.
-            </h2>
+
+
+            <div class="projectContainer">
+                <h2 class="projectDescription">
+                    Screeps
+                </h2>
+                <p>
+                    As per there website '
+                    It means "scripting creeps"
+                        It's an open-source game for programmers, wherein the core mechanic is programming
+                        your units' AI. You control your colony by writing JavaScript.'
+                </p>
+
+                <ul class="languages">
+
+                    <li class="language">Javascript</li>
+                    <li class="language">NodeJS</li>
+
+                </ul>
+            </div>
+
+            <div class="projectContainer">
+                <h2 class="projectDescription">
+                    This Website
+                </h2>
+                <p>
+                    This website runs on PythonAnywhere, uses flask, and showcases the young Nicholas Pueschel
+                </p>
+
+                <ul class="languages">
+
+                    <li class="language">flask</li>
+                    <li class="language">HTML5</li>
+                    <li class="language">css</li>
+                    <li class="language">javascript</li>
+
+                </ul>
+            </div>
 
         </div>
     </div>
