--- a/templates/home.html
+++ b/templates/home.html
@@ -30,6 +30,10 @@
         </ul>
     </div>
 
+    <div class="email">
+        <h3 class="description3">nxp6155@rit.edu</h3>
+    </div>
+
 
     <div class="container">
         <div class="descriptor">
@@ -43,9 +47,12 @@
                 Rochester Institute of Technology Class of 2021
             </h2>
             <div class ="buttonWrapper">
-                <button class="contact">
-                    GET IN TOUCH
-                </button>
+                <a href=mailto:nxp6155@rit.edu">
+                    <button class="contact">
+                        GET IN TOUCH
+                    </button>
+                </a>
+
             </div>
         </div>
     </div >
@@ -59,21 +66,21 @@
             </h1>
 
             <img class="me" src="{{url_for('static', filename='images/me.jpg')}}">
-            <h2 class="description2">
+            <h3 class="description3">
                 Welcome to my website running on pythonAnywhere!
-            </h2>
-            <h2 class="description2">
+            </h3>
+            <h3 class="description3">
                 I am a computer science student currently studying at RIT, and expecting to graduate in 2021.
-            </h2>
+            </h3>
 
-            <h2 class="description2">
+            <h3 class="description3">
                 I have programmed in many different environments, after pursuing my own projects and working at FacilityConnex,
                 a company out of Nashua NH, and additionally L3Harris, a company in Victor NY.
-            </h2>
+            </h3>
 
-            <h2 class="description2">
+            <h3 class="description3">
                 Please take a look at some of my projects, and don't hesitate to contact me with any questions.
-            </h2>
+            </h3>
 
         </div>
     </div>
@@ -86,46 +93,159 @@
                 PROJECT.ZONE
             </h1>
             <h2 class="description2">
-                Active Projects
+                Click on a project to see what I've been up to.
             </h2>
 
+            <a href="https://github.com/blockheads/ConquerorGame">
+                <div class="projectContainer">
 
-            <div class="projectContainer">
-                <h2 class="projectDescription">
-                    Screeps
-                </h2>
-                <p>
-                    As per there website '
-                    It means "scripting creeps"
-                        It's an open-source game for programmers, wherein the core mechanic is programming
-                        your units' AI. You control your colony by writing JavaScript.'
-                </p>
+                    <div class="projectDescription">
 
-                <ul class="languages">
+                        <h2 class="projectDescription">
+                            Conqueror Game
+                        </h2>
+                        <p>
+                            Currently over this summer I am working on making a python based RPG. Take a look
+                            to see my progress thus far.
+                        </p>
 
-                    <li class="language">Javascript</li>
-                    <li class="language">NodeJS</li>
+                    </div>
 
-                </ul>
-            </div>
+                    <ul class="languages">
 
-            <div class="projectContainer">
-                <h2 class="projectDescription">
-                    This Website
-                </h2>
-                <p>
-                    This website runs on PythonAnywhere, uses flask, and showcases the young Nicholas Pueschel
-                </p>
+                        <li class="language">Python</li>
+                        <li class="language">PyGame</li>
+                    </ul>
 
-                <ul class="languages">
+                </div>
+            </a>
 
-                    <li class="language">flask</li>
-                    <li class="language">HTML5</li>
-                    <li class="language">css</li>
-                    <li class="language">javascript</li>
+            <a href="https://github.com/blockheads/screeps">
+                <div class="projectContainer">
+                    <div class="projectDescription">
+                        <h2 class="projectDescription">
+                            Screeps
+                        </h2>
+                        <p>
+                            As per there website '
+                                It's an open-source game for programmers, wherein the core mechanic is programming
+                                your units' AI. You control your colony by writing JavaScript.'
 
-                </ul>
-            </div>
+                        </p>
+                        <p>
+                            An attempt at a stateful, object oriented approach to this challenge.
+                        </p>
+                    </div>
+
+                    <ul class="languages">
+
+                        <li class="language">NodeJS</li>
+
+                    </ul>
+                </div>
+            </a>
+
+            <a href="https://github.com/blockheads/NicholasPueschelWebApp">
+                <div class="projectContainer">
+
+                    <div class="projectDescription">
+
+                        <h2 class="projectDescription">
+                            This Website
+                        </h2>
+                        <p>
+                            This website runs on PythonAnywhere, uses flask, and showcases the young Nicholas Pueschel
+                        </p>
+
+                    </div>
+
+                    <ul class="languages">
+
+                        <li class="language">Flask</li>
+                        <li class="language">HTML5</li>
+                        <li class="language">CSS</li>
+                        <li class="language">Javascript</li>
+                    </ul>
+
+                </div>
+            </a>
+
+            <a href="https://github.com/blockheads/OpenGL-Render">
+                <div class="projectContainer">
+
+                    <div class="projectDescription">
+
+                        <h2 class="projectDescription">
+                            Open GL Render
+                        </h2>
+                        <p>
+                            This project renders a full scene with my own shading, all from just using OpenGL.
+                        </p>
+
+                        <p>
+                            To have some fun, I made the whole render based on Minecraft.
+                        </p>
+
+                    </div>
+
+                    <ul class="languages">
+
+                        <li class="language">C++</li>
+                        <li class="language">OpenGL</li>
+                    </ul>
+
+                </div>
+            </a>
+
+            <a href="https://github.com/blockheads/2D-Wargame">
+                <div class="projectContainer">
+
+                    <div class="projectDescription">
+
+                        <h2 class="projectDescription">
+                            2D Shooter Game
+                        </h2>
+                        <p>
+                            This was a older project, where I designed a physics based shooting simulator in
+                            Unreal Engine.
+                        </p>
+
+                    </div>
+
+                    <ul class="languages">
+
+                        <li class="language">C++</li>
+                        <li class="language">Unreal Engine</li>
+                    </ul>
+
+                </div>
+            </a>
+
+            <a href="https://github.com/blockheads/SmartLad42">
+                <div class="projectContainer">
+
+                    <div class="projectDescription">
+
+                        <h2 class="projectDescription">
+                            Discord Bot (SmartLad)
+                        </h2>
+                        <p>
+                            A discord bot I made for me and my friends to use, a passion project. It play's music,
+                            and has lot's of special fun features. Including a newly added SQL database.
+                        </p>
+
+                    </div>
+
+                    <ul class="languages">
+
+                        <li class="language">NodeJS</li>
+                        <li class="language">DiscordJS</li>
+                        <li class="language">SQLite</li>
+                    </ul>
+
+                </div>
+            </a>
+
 
         </div>
     </div>
