--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 
 
     <div class="container">
-        <div class="descriptor">
+        <div class="shiftCenterTitle">
             <h1>
             NICHOLAS PUESCHEL
             </h1>
@@ -83,7 +83,7 @@
 
     <hr class="projects">
 
-    <div class="containerAbout" id="projects">
+    <div class="containerAboutSecond" id="projects">
         <div class ="shiftCenter">
             <h1 class="description1">
                 PROJECT.ZONE
@@ -99,7 +99,7 @@
                             Screeps
                         </h2>
                         <p>
-                            As per there website '
+                            As per their website '
                                 It's an open-source game for programmers, wherein the core mechanic is programming
                                 your units' AI. You control your colony by writing JavaScript.'
 
